2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b5

	* Change: Center the block-random image, to match the text

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b4

	* Change: Update security message to mention secure.sh, and only
	  appear on non-Windows OSes.

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b3

	* Change: Logout with relative URLs would return a redirect error
	  due to doubling of the photoAlbumUrl

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b2

	* Change: Another case of relying on the submit button for a value,
	  but it's now disabled

2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b1

	* Change: (1.4.4RC1) Check POST vars for $include before resetting to 'albums.php'

FOR THE REST OF THE CHANGELOG, SEE ChangeLog.archive.gz