@@ -1,3 +1,8 @@
+2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b6
+
+	* Change: Incorrect variable assignment in view_album optimization
+	  could yield hidden photos viewable
+
 2004-07-10  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b5
 
 	* Change: Center the block-random image, to match the text
